@@ -10,3 +10,7 @@ Running:
 ```ps1
 java --module-path "C:\Program Files\javafx-sdk-18.0.1\lib" --add-modules javafx.controls HelloWorldApplication
 ```
+
+Other important ```--add-modules```:
+- ```javafx.fxml```
+- Example: ```javac --module-path "C:\Program Files\javafx-sdk-18.0.1\lib" --add-modules javafx.controls,javafx.fxml FXML_Project.java```
